index.html complete

--- a/assets/src/price-list.html
+++ b/assets/src/price-list.html
@@ -259,7 +259,8 @@
                     breakpoint: 576,
                     settings: {
                         slidesToShow: 1,
-                        arrows: false
+                        arrows: false,
+                        dots: true
                     }
                 }
             ]
