--- a/assets/src/catalog.html
+++ b/assets/src/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Специалисты</title>
+    <title>Телеконсультации</title>
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="dist/js/critical.js"></script>
 </head>
@@ -34,13 +34,37 @@
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">
-                        Специалисты
+                        Телеконсультации
                     </h1>
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6 col-12  mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                        <div class="col-md-4 col-sm-6 col-12 mb-4">
+                            //= dist/template/card-product/card-product-big.html
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
