--- a/assets/src/detailed-card.html
+++ b/assets/src/detailed-card.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Специалисты</title>
+    <title>Прейскурант</title>
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="dist/js/critical.js"></script>
 </head>
@@ -34,13 +34,42 @@
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">
-                        Специалисты
+                        Консультация ЛОРа
                     </h1>
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
-                    //= dist/template/specialists-itm/specialists-itm.html
+                    <div class="detailed-card" data-product-id="1">
+                        <div class="detailed-card__img">
+                            <img class="img-fluid" src="dist/img/detailed-card-img.jpg" alt="Консультация ЛОРа">
+                        </div>
+                        <div class="detailed-card__content">
+                            <div class="detailed-card__header">
+                                <span class="detailed-card__caption">Стоимость услуги - 500 руб.</span>
+                                <button class="btn btn-primary btn_padding_big btn_radius_1 js-add-basket">В корзину</button>
+                            </div>
+                            <div class="detailed-card__text">
+                                <p><strong>Продолжительность: </strong><span>30 мин.</span></p>
+                                <p>
+                                    <strong>Описание услуги</strong>
+                                    <br>
+                                    В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам  В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам
+                                </p>
+                                <p>
+                                    <strong>Что необходимо для консультации:</strong>
+                                    <br>
+                                    -анализы на кровь
+                                    <br>
+                                    -история болезни
+                                    <br>
+                                    <br>
+                                    В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам  В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам
+                                </p>
+                                <p>
+                                    <strong>Как будет проходить консультация:</strong>
+                                    <br>
+                                    В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам  В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам В течение 10 минут нужный Вам специалист будет консультировать по нужным Вам вопросам
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
